# halo2_sha256

./: Cargo.toml
benches/: digest.rs
src/: lib.rs  sha256.rs  table16.rs
src/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
src/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
src/table16/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
